<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Shop</string>
    <string name="title_notifications">Search</string>
    <string name="title_profile">Profile</string>
    <string name="rumah_makan_bahagia">Rumah Makan Bahagia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="login_txt">Login</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="don_t_have_an_account_txt">Don\'t have an account?</string>
    <string name="register_txt">Register</string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="nama_lengkap_txt">Nama Lengkap</string>


</resources>